--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.4.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
+    "mysql2": "^2.1.0",
     "sucrase": "^3.13.0"
   },
   "scripts": {
