--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
     "dev": "nodemon app.js"
   },
   "author": "Hamilton Silva <hamiltonsilva551@gmail.com>",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
+  }
 }
